--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -161,7 +161,6 @@
 }
 
 .navigation{
-	height: 110px;
 	a{
 		margin: 0px 25px 0px 0px;
 	}
