--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -11,10 +11,9 @@
 .user{
 	margin: 20px 0px 20px 0px;
 	.icon{
-		display: inline-block;
 		float: left;
 		margin: 0px 20px 0px 0px;
-		height: 300px;
+		height: 270px;
 	}
 	.info_section{
 		margin: 10px 0px 0px 0px;
